--- a/gerenciador_tarefas/app/templates/base.html
+++ b/gerenciador_tarefas/app/templates/base.html
@@ -26,9 +26,14 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'listar_tarefas' %}"
-              >Listar Tarefas <span class="sr-only">(current)</span></a
-            >
+            <a class="nav-link" href="{% url 'listar_tarefas' %}">
+            Listar Tarefas <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'deslogar_usuario' %}">
+            Sair <span class="sr-only">(current)</span>
+            </a>
           </li>
         </ul>
       </div>
